--- a/kubernetes/utility/apps/storage/csi-driver-nfs/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/storage/csi-driver-nfs/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
       name: nfs-slow
       parameters:
         server: voyager.internal
-        share: /mnt/user/cache-share #NVMe PM983
+        share: /mnt/user/kubernetes
       mountOptions:
         - nfsvers=4.2
         - nconnect=16
