--- a/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helm-values.yaml
@@ -52,14 +52,15 @@ operator:
     annotations:
       grafana_folder: Network
 prometheus:
-  enabled: true
-  serviceMonitor:
+  dashboards:
     enabled: true
-    trustCRDsExist: true
-dashboards:
-  enabled: true
-  annotations:
-    grafana_folder: Network
+    annotations:
+      grafana_folder: Network
+  prometheus:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+  rollOutPods: true
 rollOutCiliumPods: true
 routingMode: native
 securityContext:
