--- a/kubernetes/utility/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helmrelease.yaml
@@ -27,35 +27,37 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: cilium-helm-values
-  # Enable Hubble, Hubble Relay and Hubble UI
   values:
-    hubble:
-      enabled: true
-      metrics:
-        enabled:
-          - dns:query
-          - drop
-          - tcp
-          - flow
-          - port-distribution
-          - icmp
-          - http
-        serviceMonitor:
-          enabled: true
-        dashboards:
-          enabled: true
-          annotations:
-            grafana_folder: Network
-      relay:
-        enabled: true
-        rollOutPods: true
-        prometheus:
-          serviceMonitor:
-            enabled: true
-      ui:
-        enabled: true
-        rollOutPods: true
-        ingress:
-          enabled: true
-          className: internal
-          hosts: ["hubble-utility.${SECRET_DOMAIN}"]
+    operator:
+      tolerations: []
+  # Enable Hubble, Hubble Relay and Hubble UI
+    # hubble:
+    #   enabled: true
+    #   metrics:
+    #     enabled:
+    #       - dns:query
+    #       - drop
+    #       - tcp
+    #       - flow
+    #       - port-distribution
+    #       - icmp
+    #       - http
+    #     serviceMonitor:
+    #       enabled: true
+    #     dashboards:
+    #       enabled: true
+    #       annotations:
+    #         grafana_folder: Network
+    #   relay:
+    #     enabled: true
+    #     rollOutPods: true
+    #     prometheus:
+    #       serviceMonitor:
+    #         enabled: true
+    #   ui:
+    #     enabled: true
+    #     rollOutPods: true
+    #     ingress:
+    #       enabled: true
+    #       className: internal
+    #       hosts: ["hubble-utility.${SECRET_DOMAIN}"]
