--- a/.github/workflows/flux-local.yaml
+++ b/.github/workflows/flux-local.yaml
@@ -5,10 +5,6 @@ name: "Flux Local"
 on:
   pull_request:
     branches: ["main"]
-    paths:
-      - kubernetes/**/apps/**
-      - kubernetes/**/flux/**
-      - kubernetes/shared/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
@@ -20,19 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.process-changes.outputs.matrix }}
+      any_changed: ${{ steps.process-change.outputs.any_changed }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
-      - name: Checkout Default Branch
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          token: ${{ steps.app-token.outputs.token }}
-          fetch-depth: 0
 
       - name: Get Changed Clusters
         id: changed-clusters
@@ -62,23 +49,15 @@ jobs:
 
   test:
     name: Flux Local Test
+    needs: changed-clusters
     runs-on: ubuntu-latest
-    needs: ["changed-clusters"]
     strategy:
       matrix:
         paths: ${{ fromJSON(needs.changed-clusters.outputs.matrix) }}
+    if: ${{ needs.changed-clusters.outputs.any_changed == 'true' }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          token: ${{ steps.app-token.outputs.token }}
 
       - name: Run flux-local test
         uses: docker://ghcr.io/allenporter/flux-local:v7.0.0
@@ -87,8 +66,8 @@ jobs:
 
   diff:
     name: Flux Local Diff
+    needs: changed-clusters
     runs-on: ubuntu-latest
-    needs: ["changed-clusters"]
     permissions:
       pull-requests: write
     strategy:
@@ -97,24 +76,16 @@ jobs:
         resources: ["helmrelease", "kustomization"]
       max-parallel: 4
       fail-fast: false
+    if: ${{ needs.changed-clusters.outputs.any_changed == 'true' }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout Pull Request Branch
         uses: actions/checkout@v4
         with:
-          token: ${{ steps.app-token.outputs.token }}
           path: pull
 
       - name: Checkout Default Branch
         uses: actions/checkout@v4
         with:
-          token: ${{ steps.app-token.outputs.token }}
           ref: ${{ github.event.repository.default_branch }}
           path: default
 
@@ -148,8 +119,16 @@ jobs:
               echo '```'
           } >> "$GITHUB_STEP_SUMMARY"
 
-      - if: ${{ steps.diff.outputs.diff != '' }}
-        name: Add comment
+      - name: Generate Token
+        if: ${{ steps.diff.outputs.diff != '' }}
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.BOT_APP_ID }}
+          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
+      - name: Add comment
+        if: ${{ steps.diff.outputs.diff != '' }}
         uses: mshick/add-pr-comment@v2
         with:
           repo-token: ${{ steps.app-token.outputs.token }}
@@ -161,8 +140,8 @@ jobs:
             ```
 
   flux-local-status:
-    needs: ["test", "diff"]
     name: Flux Local Success
+    needs: ["test", "diff"]
     runs-on: ubuntu-latest
     if: ${{ always() }}
     steps:
