--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -3,27 +3,38 @@
 name: "Helm Repository Sync"
 
 on:
-  workflow_dispatch:
-    inputs:
-      clusterName:
-        description: Cluster Name
-        default: main
-        required: true
-      helmRepoNamespace:
-        description: Helm Repository Namespace
-        default: flux-system
-        required: true
-      helmRepoName:
-        description: Helm Repository Name
-        required: true
   pull_request:
     branches: ["main"]
-    paths: ["kubernetes/**/helmrelease.yaml"]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
+
+env:
+  HOMEBREW_NO_ANALYTICS: "1"
 
 jobs:
+  pre-job:
+    runs-on: ubuntu-latest
+    outputs:
+      any_changed: ${{ steps.changed-files.outputs.any_changed }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get Changed Files
+        id: changed-files
+        uses: tj-actions/changed-files@v45
+        with:
+          files: |
+            **/helmrelease.yaml
+            **/helm-values.yaml
+
   helm-repository-sync:
     name: Helm Repository Sync
-    runs-on: [home-ops-runner]
+    needs: pre-job
+    runs-on: home-ops-runner
+    if: ${{ needs.pre-job.outputs.any_changed == 'true' }}
     steps:
       - name: Configure 1password
         uses: 1password/load-secrets-action/configure@v2
@@ -37,17 +48,8 @@ jobs:
         env:
           KUBECONFIG_BASE64: op://Kubernetes/kubernetes/KUBECONFIG_BASE64
 
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          token: ${{ steps.app-token.outputs.token }}
 
       - name: Setup Homebrew
         uses: Homebrew/actions/setup-homebrew@master
@@ -62,20 +64,16 @@ jobs:
           encodedString: ${{ env.KUBECONFIG_BASE64 }}
           fileName: kubeconfig
 
-      - if: ${{ github.event.inputs.clusterName == '' && github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: Get Changed Files
+      - name: Get Changed Files
         id: changed-files
         uses: tj-actions/changed-files@v45
         with:
-          files: kubernetes/**/helmrelease.yaml
+          files: |
+            **/helmrelease.yaml
+            **/helm-values.yaml
           safe_output: false
 
-      - if: ${{ github.event.inputs.clusterName == '' && github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: List All Changed Files
-        run: echo ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
-
-      - if: ${{ github.event.inputs.clusterName == '' && github.event.inputs.helmRepoNamespace == '' && github.event.inputs.helmRepoName == '' }}
-        name: Sync Helm Repository
+      - name: Sync Helm Repository
         env:
           KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
         shell: bash
@@ -96,19 +94,8 @@ jobs:
                   reconcile source helm ${repo_name} || true
           done
 
-      - if: ${{ github.event.inputs.clusterName != '' && github.event.inputs.helmRepoNamespace != '' && github.event.inputs.helmRepoName != '' }}
-        name: Sync Helm Repository
-        env:
-          KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
-        shell: bash
-        run: |
-          flux \
-              --context ${{ github.event.inputs.clusterName }} \
-              --namespace ${{ github.event.inputs.helmRepoNamespace }} \
-              reconcile source helm ${{ github.event.inputs.helmRepoName }} || true
-
   helm-repository-sync-status:
-    needs: ["helm-repository-sync"]
+    needs: helm-repository-sync
     name: Helm Repository Sync Success
     runs-on: ubuntu-latest
     if: ${{ always() }}
