--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -5,10 +5,6 @@ name: "Pre-pull Images"
 on:
   pull_request:
     branches: ["main"]
-    paths:
-      - kubernetes/**/apps/**
-      - kubernetes/**/flux/**
-      - kubernetes/shared**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
@@ -23,19 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.changed-clusters.outputs.all_changed_and_modified_files }}
+      any_changed: ${{ steps.changed-clusters.outputs.any_changed }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          token: ${{ steps.app-token.outputs.token }}
-          fetch-depth: 0
 
       - name: Get Changed Clusters
         id: changed-clusters
@@ -52,8 +39,9 @@ jobs:
 
   extract-images:
     name: Extract Images
+    needs: changed-clusters
     runs-on: ubuntu-latest
-    needs: ["changed-clusters"]
+    if: ${{ needs.changed-cluster.outputs.any_changed == 'true' }}
     strategy:
       matrix:
         branches: ["default", "pull"]
@@ -63,17 +51,9 @@ jobs:
       default: ${{ steps.extract-images.outputs.default }}
       pull: ${{ steps.extract-images.outputs.pull }}
     steps:
-      - name: Generate Token
-        uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.BOT_APP_ID }}
-          private-key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: ${{ steps.app-token.outputs.token }}
           ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
 
       - name: Gather Images
@@ -98,9 +78,10 @@ jobs:
   compare-images:
     name: Compare Images
     runs-on: ubuntu-latest
-    needs: ["extract-images"]
+    needs: ["changed-clusters", "extract-images"]
     outputs:
       images: ${{ steps.compare-images.outputs.images }}
+    if: ${{ needs.changed-clusters.outputs.any_changed == 'true' }}
     steps:
       - name: Compare Images
         id: compare-images
@@ -113,16 +94,16 @@ jobs:
           echo "images=${images}" >> $GITHUB_OUTPUT
 
   pre-pull-images:
-    if: ${{ needs.compare-images.outputs.images != '[]' }}
     name: Pre-pull Images
     runs-on: [home-ops-runner]
-    needs: ["compare-images", "changed-clusters"]
+    needs: ["changed-clusters", "compare-images"]
     strategy:
       matrix:
         images: ${{ fromJSON(needs.compare-images.outputs.images) }}
         paths: ${{ fromJSON(needs.changed-clusters.outputs.matrix) }}
       max-parallel: 4
       fail-fast: false
+    if: ${{ needs.changed-clusters.outputs.any_changed == 'true' }}
     steps:
       - name: Grab Cluster Name
         run: |
