--- a/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
@@ -115,6 +115,7 @@ spec:
             env:
               ACARSHUB_HOST: acars-acarshub
               ACARSHUB_PORT: "15550"
+              FILTER_CRITERIA_HAS_TEXT: "true"
               ANNOTATE_ACARS: "true"
               LOGLEVEL: debug
             envFrom:
