feat: filter messages

--- a/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/self-hosted/acars/app/helmrelease.yaml
@@ -116,6 +116,12 @@ spec:
               ACARSHUB_HOST: acars-acarshub
               ACARSHUB_PORT: "15550"
               ANNOTATE_ACARS: "true"
+              ACARS_ANNOTATOR_SELECTED_FIELDS: >-
+                acarsAircraftTailCode
+                acarsExtraURL
+                acarsFlightNumber
+                acarsFrequencyMHz
+                acarsMessageText
               FILTER_CRITERIA_HAS_TEXT: "true"
               LOGLEVEL: debug
             envFrom:
