--- a/kubernetes/main/talos/talconfig.yaml
+++ b/kubernetes/main/talos/talconfig.yaml
@@ -7,14 +7,19 @@ kubernetesVersion: v1.32.2
 
 clusterName: &cluster main
 endpoint: https://10.69.1.20:6443
+
 clusterPodNets:
   - "10.42.0.0/16"
+
 clusterSvcNets:
   - "10.43.0.0/16"
+
 additionalApiServerCertSans: &sans
   - "10.69.1.20"
-  - 127.0.0.1 # KubePrism
+  - "127.0.0.1"
 additionalMachineCertSans: *sans
+
+# Disable built-in Flannel to use Cilium
 cniConfig:
   name: none
 
@@ -146,204 +151,24 @@ nodes:
         dhcpOptions:
             routeMetric: 1024
 
+# Global patches
 patches:
-  # Configure containerd
-  - |
-    machine:
-      files:
-        - # Spegel
-          op: create
-          path: /etc/cri/conf.d/20-customization.part
-          content: |
-            [plugins."io.containerd.cri.v1.images"]
-              discard_unpacked_layers = false
+  - "@./patches/global/machine-files.yaml"   # Spegel/NFS Mount
+  - "@./patches/global/machine-install.yaml" # Less security, faster puter
+  - "@./patches/global/machine-kubelet.yaml" # VLAN Subnet Info
+  - "@./patches/global/machine-network.yaml" # Search Domain
+  - "@./patches/global/machine-openebs.yaml" # Kubelet Mount
+  - "@./patches/global/machine-sysctls.yaml" # Network Tweaks
+  - "@./patches/global/machine-sysfs.yaml"   # CPU Power
 
-  # Configure NFS Mounts
-  - |
-    machine:
-      files:
-        - op: overwrite
-          path: /etc/nfsmount.conf
-          permissions: 0o644
-          content: |
-            [ NFSMount_Global_Options ]
-            nfsvers=4.2
-            hard=True
-            nconnect=16
-            noatime=True
-
-  # Disable search domain everywhere
-  - |-
-    machine:
-      network:
-        disableSearchDomain: true
-
-  # Enable cluster discovery
-  # - |-
-  #   cluster:
-  #     discovery:
-  #       enabled: true
-  #       registries:
-  #         kubernetes:
-  #           disabled: false
-  #         service:
-  #           disabled: true
-
-  # Configure kubelet
-  - |-
-    machine:
-      kubelet:
-        nodeIP:
-          validSubnets:
-            - "10.69.1.0/24"
-
-  # Enable MutatingAdmissionPolicy
-  - |-
-    cluster:
-      apiServer:
-        extraArgs:
-          enable-aggregator-routing: true
-          feature-gates: MutatingAdmissionPolicy=true
-          runtime-config: admissionregistration.k8s.io/v1alpha1=true
-
-  # Custom sysctl settings
-  - |-
-    machine:
-      sysctls:
-        fs.inotify.max_user_watches: 1048576   # Watchdog
-        fs.inotify.max_user_instances: 8192    # Watchdog
-        net.core.default_qdisc: fq             # 2.5Gb/s
-        net.core.rmem_max: 67108864            # 2.5Gb/s | Cloudflared / QUIC
-        net.core.wmem_max: 67108864            # 2.5Gb/s | Cloudflared / QUIC
-        net.ipv4.tcp_congestion_control: bbr   # 2.5Gb/s
-        net.ipv4.tcp_fastopen: 3               # TCP Fast Open
-        net.ipv4.tcp_rmem: 4096 87380 33554432 # 2.5Gb/s
-        net.ipv4.tcp_wmem: 4096 65536 33554432 # 2.5Gb/s
-        net.ipv4.tcp_window_scaling: 1         # 2.5Gb/s
-        vm.nr_hugepages: "1024"
-
-  # Custom sysfs settings # 5/6 nodes are 6c/12t and constantly throwing DMESG errors
-  - |-
-    machine:
-      sysfs:
-        devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu4.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu5.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu6.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu7.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu8.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_power
-        devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_power
-
-  # Mount openebs-hostpath in kubelet
-  - |-
-    machine:
-      kubelet:
-        extraMounts:
-          - destination: /var/openebs/local
-            type: bind
-            source: /var/openebs/local
-            options: ["bind", "rshared", "rw"]
-
-  # # Performance hacks
-  - |-
-    machine:
-      install:
-        extraKernelArgs:
-          - apparmor=0              # Less security, faster puter
-          - init_on_alloc=0         # Less security, faster puter
-          - init_on_free=0          # Less security, faster puter
-          - mitigations=off         # Less security, faster puter
-          - security=none           # Less security, faster puter
-          - talos.auditd.disabled=1 # Less security, faster puter
+# Controller patches
 controlPlane:
   nodeLabels:
     topology.kubernetes.io/zone: controlPlane
   patches:
-    # Cluster configuration
-    - |-
-      cluster:
-        allowSchedulingOnControlPlanes: true
-        controllerManager:
-          extraArgs:
-            bind-address: 0.0.0.0
-        coreDNS:
-          disabled: true
-        proxy:
-          disabled: true
-        scheduler:
-          extraArgs:
-            bind-address: 0.0.0.0
-          config:
-            apiVersion: kubescheduler.config.k8s.io/v1
-            kind: KubeSchedulerConfiguration
-            profiles:
-              - schedulerName: default-scheduler
-                plugins:
-                  score:
-                    disabled:
-                      - name: ImageLocality
-                pluginConfig:
-                  - name: PodTopologySpread
-                    args:
-                      defaultingType: List
-                      defaultConstraints:
-                        - maxSkew: 1
-                          topologyKey: kubernetes.io/hostname
-                          whenUnsatisfiable: ScheduleAnyway
-
-    # ETCD configuration
-    - |-
-      cluster:
-        etcd:
-          extraArgs:
-            listen-metrics-urls: http://0.0.0.0:2381
-          advertisedSubnets:
-            - "10.69.1.0/24"
-
-    # Prometheus CRD configuration
-    - |-
-      cluster:
-        extraManifests:
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
-          - https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/${promVersion}/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
-
-    # Disable default API server admission plugins.
-    - |-
-      - op: remove
-        path: /cluster/apiServer/admissionControl
-
-    # Enable K8s Talos API Access
-    - |-
-      machine:
-        features:
-          kubernetesTalosAPIAccess:
-            enabled: true
-            allowedRoles:
-              - os:admin
-            allowedKubernetesNamespaces:
-              - kube-tools
-
-    # Enable hostDNS:
-    - |-
-      machine:
-        features:
-          hostDNS:
-            enabled: true
-            forwardKubeDNSToHost: true
-            resolveMemberNames: true
+    - "@./patches/controller/admission-controller-patch.yaml"
+    - "@./patches/controller/cluster.yaml"
+    - "@./patches/controller/machine-features.yaml"
 
 worker:
   nodeLabels:
