--- a/.github/workflows/pre-pull-images.yaml
+++ b/.github/workflows/pre-pull-images.yaml
@@ -10,9 +10,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
   cancel-in-progress: true
 
-env:
-  HOMEBREW_NO_ANALYTICS: "1"
-
 jobs:
   changed-clusters:
     name: Changed Clusters
@@ -130,11 +127,8 @@ jobs:
           encodedString: "${{ env.TALOSCONFIG_BASE64 }}"
           fileName: talosconfig
 
-      - name: Setup Homebrew
-        uses: Homebrew/actions/setup-homebrew@master
-
-      - name: Setup Workflow Tools
-        run: brew install siderolabs/tap/talosctl
+      - name: Install talosctl
+        run: curl -fsSL https://talos.dev/install | sh
 
       - name: Pre-pull Image
         env:
