--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -76,14 +76,10 @@ jobs:
           encodedString: "${{ env.KUBECONFIG_BASE64 }}"
           fileName: kubeconfig
 
-      - name: Download and run crd-extractor
+      - name: Run crd-extractor
         env:
           KUBECONFIG: ${{ steps.kubeconfig.outputs.filePath }}
-        run: |
-          curl -fsSL -o $GITHUB_WORKSPACE/crd-extractor.sh \
-              https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/Utilities/crd-extractor.sh
-          chmod +x $GITHUB_WORKSPACE/crd-extractor.sh
-          bash $GITHUB_WORKSPACE/crd-extractor.sh
+        run: curl -fsSL https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/Utilities/crd-extractor.sh | bash
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
