chore: update flux receiver, provider and alert names

--- a/kubernetes/infrastructure/components/common/alerts/github-status/provider.yaml
+++ b/kubernetes/infrastructure/components/common/alerts/github-status/provider.yaml
@@ -3,9 +3,9 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Provider
 metadata:
-  name: github
+  name: github-status
 spec:
   type: github
   address: https://github.com/joryirving/home-ops
   secretRef:
-    name: github-token
+    name: github-status-token
