--- a/kubernetes/apps/base/flux-system/addons/app/externalsecret.yaml
+++ b/kubernetes/apps/base/flux-system/addons/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name github-webhook-token
+  name: github-webhook-token
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
