--- a/kubernetes/apps/base/flux-system/addons/app/receiver.yaml
+++ b/kubernetes/apps/base/flux-system/addons/app/receiver.yaml
@@ -1,14 +1,12 @@
 ---
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/notification.toolkit.fluxcd.io/receiver_v1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/notification.toolkit.fluxcd.io/receiver_v1.json
 apiVersion: notification.toolkit.fluxcd.io/v1
 kind: Receiver
 metadata:
-  name: home-ops
+  name: github-webhook
 spec:
   type: github
-  events:
-    - ping
-    - push
+  events: ["ping", "push"]
   secretRef:
     name: github-webhook-token
   resources:
