--- a/kubernetes/infrastructure/components/common/alerts/github-status/externalsecret.yaml
+++ b/kubernetes/infrastructure/components/common/alerts/github-status/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name github-token
+  name: &name github-status-token
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
