--- a/kubernetes/apps/utility/kube-tools/kustomization.yaml
+++ b/kubernetes/apps/utility/kube-tools/kustomization.yaml
@@ -7,6 +7,7 @@ components:
   - ../../../infrastructure/components/clusters/utility
   - ../../../infrastructure/components/common
 resources:
+  - ./descheduler/ks.yaml
   - ./fstrim/ks.yaml
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
