fix: add postbuild

--- a/kubernetes/apps/main/observability/karma/ks.yaml
+++ b/kubernetes/apps/main/observability/karma/ks.yaml
@@ -12,6 +12,9 @@ spec:
     - ../../../../infrastructure/components/gatus/external
   interval: 30m
   path: ./kubernetes/apps/base/observability/karma
+  postBuild:
+    substitute:
+      APP: *app
   prune: true
   sourceRef:
     kind: GitRepository
