feat: try setting rebase

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,6 +9,7 @@
     "github>joryirving/home-ops//.github/renovate/packageRules.json5"
   ],
   "ignorePaths": ["**/*.sops.*", "**/resources/**"],
+  "rebaseWhen": "automerging",
   "flux": {
     "fileMatch": [
       "(^|/)kubernetes/.+\\.ya?ml$"
