--- a/kubernetes/apps/main/downloads/recyclarr/ks.yaml
+++ b/kubernetes/apps/main/downloads/recyclarr/ks.yaml
@@ -15,7 +15,7 @@ spec:
       namespace: downloads
     - name: sonarr
       namespace: downloads
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: volsync
       namespace: storage
