--- a/kubernetes/apps/main/games/minecraft/ks.yaml
+++ b/kubernetes/apps/main/games/minecraft/ks.yaml
@@ -32,7 +32,7 @@ spec:
 #    - ../../../../../infrastructure/components/gatus/external
 #    - ../../../../../infrastructure/components/volsync
 #   dependsOn:
-#     - name: onepassword-store
+#     - name: onepassword
 #       namespace: external-secrets
 #   interval: 30m
 #   path: ./kubernetes/apps/base/games/minecraft/create
@@ -62,7 +62,7 @@ spec:
    - ../../../../../infrastructure/components/gatus/external
    - ../../../../../infrastructure/components/volsync
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/games/minecraft/takocraft
@@ -92,7 +92,7 @@ spec:
 #    - ../../../../../infrastructure/components/gatus/external
 #    - ../../../../../infrastructure/components/volsync
 #   dependsOn:
-#     - name: onepassword-store
+#     - name: onepassword
 #       namespace: external-secrets
 #   interval: 30m
 #   path: ./kubernetes/apps/base/games/minecraft/vibecraft
