--- a/kubernetes/apps/main/media/plex/ks.yaml
+++ b/kubernetes/apps/main/media/plex/ks.yaml
@@ -12,7 +12,7 @@ spec:
     - ../../../../../infrastructure/components/gatus/external
     - ../../../../../infrastructure/components/volsync
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: rook-ceph-cluster
       namespace: rook-ceph
@@ -51,7 +51,7 @@ spec:
       namespace: downloads
     - name: sonarr
       namespace: downloads
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: plex
       namespace: media
@@ -143,7 +143,7 @@ spec:
   dependsOn:
     - name: plex
       namespace: media
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/media/plex/plex-image-cleanup
@@ -171,7 +171,7 @@ spec:
   components:
     - ../../../../../infrastructure/components/volsync
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: plex
       namespace: media
