--- a/kubernetes/apps/main/self-hosted/atuin/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/atuin/ks.yaml
@@ -16,7 +16,7 @@ spec:
       namespace: database
     - name: crunchy-postgres-stores
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   path: ./kubernetes/apps/base/self-hosted/atuin
   postBuild:
