--- a/kubernetes/apps/utility/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/utility/cert-manager/cert-manager/ks.yaml
@@ -59,7 +59,7 @@ spec:
   dependsOn:
     - name: cert-manager-issuers
       namespace: cert-manager
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   healthCheckExprs:
     - apiVersion: cert-manager.io/v1
