--- a/kubernetes/apps/base/database/crunchy-postgres/cluster/kustomization.yaml
+++ b/kubernetes/apps/base/database/crunchy-postgres/cluster/kustomization.yaml
@@ -4,6 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./cluster.yaml
+  - ./clustersecretstore.yaml
   - ./externalsecret.yaml
   - ./gatus.yaml
   - ./podmonitor.yaml
+  - ./rbac.yaml
