--- a/kubernetes/apps/main/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/main/cert-manager/cert-manager/ks.yaml
@@ -29,7 +29,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   healthCheckExprs:
     - apiVersion: cert-manager.io/v1
@@ -59,7 +59,7 @@ spec:
   dependsOn:
     - name: cert-manager-issuers
       namespace: cert-manager
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   healthCheckExprs:
     - apiVersion: cert-manager.io/v1
