--- a/kubernetes/apps/main/downloads/radarr/ks.yaml
+++ b/kubernetes/apps/main/downloads/radarr/ks.yaml
@@ -15,7 +15,7 @@ spec:
       namespace: database
     - name: crunchy-postgres-stores
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/downloads/radarr
