--- a/kubernetes/apps/main/media/your-spotify/ks.yaml
+++ b/kubernetes/apps/main/media/your-spotify/ks.yaml
@@ -12,7 +12,7 @@ spec:
     - ../../../../infrastructure/components/gatus/external
     - ../../../../infrastructure/components/volsync
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: volsync
       namespace: storage
