--- a/kubernetes/apps/main/network/external/ks.yaml
+++ b/kubernetes/apps/main/network/external/ks.yaml
@@ -11,7 +11,7 @@ spec:
   dependsOn:
     - name: external-dns-cloudflare
       namespace: network
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/network/external/cloudflared
@@ -62,7 +62,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/network/external/external-dns
