--- a/kubernetes/apps/main/observability/gatus/ks.yaml
+++ b/kubernetes/apps/main/observability/gatus/ks.yaml
@@ -13,7 +13,7 @@ spec:
       namespace: database
     - name: crunchy-postgres-stores
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/observability/gatus
