--- a/kubernetes/apps/main/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/main/rook-ceph/rook-ceph/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/rook-ceph/rook-ceph/app
@@ -34,7 +34,7 @@ spec:
   components:
     - ../../../../../infrastructure/components/gatus/guarded
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
