--- a/kubernetes/apps/main/security/authentik/ks.yaml
+++ b/kubernetes/apps/main/security/authentik/ks.yaml
@@ -17,7 +17,7 @@ spec:
       namespace: database
     - name: dragonfly-cluster
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/security/authentik
