--- a/kubernetes/apps/main/self-hosted/paperless/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/paperless/ks.yaml
@@ -16,7 +16,7 @@ spec:
       namespace: database
     - name: dragonfly-cluster
       namespace: database
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: volsync
       namespace: storage
