--- a/kubernetes/apps/utility/home-automation/mosquitto/ks.yaml
+++ b/kubernetes/apps/utility/home-automation/mosquitto/ks.yaml
@@ -11,7 +11,7 @@ spec:
   components:
     - ../../../../infrastructure/components/gatus/guarded
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/home-automation/mosquitto/
