--- a/kubernetes/apps/utility/home-automation/rtlamr2mqtt/ks.yaml
+++ b/kubernetes/apps/utility/home-automation/rtlamr2mqtt/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
     - name: node-feature-discovery-features
       namespace: kube-tools
