--- a/kubernetes/apps/utility/network/external/ks.yaml
+++ b/kubernetes/apps/utility/network/external/ks.yaml
@@ -9,7 +9,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/network/external/cloudflare-ddns
@@ -34,7 +34,7 @@ spec:
   dependsOn:
     - name: external-dns-cloudflare
       namespace: network
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/network/external/cloudflared
@@ -84,7 +84,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/network/external/external-dns
