--- a/kubernetes/apps/utility/observability/grafana/ks.yaml
+++ b/kubernetes/apps/utility/observability/grafana/ks.yaml
@@ -11,7 +11,7 @@ spec:
   components:
     - ../../../../infrastructure/components/gatus/external
   dependsOn:
-    - name: onepassword-store
+    - name: onepassword
       namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/base/observability/grafana
