--- a/kubernetes/apps/main/self-hosted/paperless/ks.yaml
+++ b/kubernetes/apps/main/self-hosted/paperless/ks.yaml
@@ -12,7 +12,7 @@ spec:
     - ../../../../infrastructure/components/gatus/guarded
     - ../../../../infrastructure/components/volsync
   dependsOn:
-    - name: crunchy-postgres-stores
+    - name: crunchy-postgres-cluster
       namespace: database
     - name: dragonfly-cluster
       namespace: database
