--- a/.github/workflows/helm-repository-sync.yaml
+++ b/.github/workflows/helm-repository-sync.yaml
@@ -33,7 +33,7 @@ jobs:
     runs-on: home-ops-runner
     strategy:
       matrix:
-        cluster: ["main", "utility"]
+        cluster: ["main", "test", "utility"]
     if: ${{ needs.pre-job.outputs.any_changed == 'true' }}
     steps:
       - name: Configure 1password
