--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -13,7 +13,7 @@
       runs-on: [home-ops-runner]
       strategy:
         matrix:
-          cluster: ["main", "utility"]
+          cluster: ["main", "test", "utility"]
       steps:
         - name: Configure 1password
           uses: 1password/load-secrets-action/configure@v2
