--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -103,8 +103,8 @@ tasks:
       - flux delete -s -n actions-runner-system helmrelease home-ops-runner || true
       - flux delete -s -n actions-runner-system helmrelease actions-runner-controller || true
       - sleep 5
-      - flux -n flux-system reconcile ks actions-runner-controller
-      - flux -n flux-system reconcile ks actions-runner-controller-runners
+      - flux -n actions-runner-system reconcile ks actions-runner-controller
+      - flux -n actions-runner-system reconcile ks actions-runner-controller-runners
     requires:
       vars: [CLUSTER]
     preconditions:
