--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -18,6 +18,7 @@ dotenv:
   - '{{.KUBERNETES_DIR}}/components/system-upgrade/.env'
 
 env:
+  KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
   SOPS_AGE_KEY_FILE: '{{.ROOT_DIR}}/age.key'
   TALOSCONFIG: '{{.TALOS_DIR}}/clusterconfig/talosconfig'
