--- a/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
     keepHistory: false
   dependsOn:
     - name: node-feature-discovery
-      namespace: kube-system
+      namespace: kube-tools
   values:
     controllerExtraArgs: |
       - --devices=gpu
