chore: reorganize helmfile flux apps

--- a/kubernetes/apps/base/kube-system/coredns/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-system/coredns/helmrelease.yaml
@@ -26,6 +26,6 @@ spec:
     keepHistory: false
   valuesFrom:
     - kind: ConfigMap
-      name: coredns-helm-values
+      name: coredns-values
   values:
     replicaCount: ${REPLICAS:=1}
