--- a/kubernetes/apps/base/kube-system/cilium/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
     keepHistory: false
   valuesFrom:
     - kind: ConfigMap
-      name: cilium-helm-values
+      name: cilium-values
   values:
     operator:
       tolerations: []
