--- a/kubernetes/clusters/main/flux-instance/kustomization.yaml
+++ b/kubernetes/clusters/main/flux-instance/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - ./helmrelease.yaml
   - ./prometheusrule.yaml
 configMapGenerator:
-  - name: flux-instance-helm-values
+  - name: flux-instance-values
     files:
-      - values.yaml=./helm-values.yaml
+      - values.yaml=./helm/values.yaml
 configurations:
-  - kustomizeconfig.yaml
+  - ./helm/kustomizeconfig.yaml
