feat: add dependy chains for the CSI/volsync/storage-controller

--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -27,7 +27,8 @@ spec:
       retries: 3
   dependsOn:
     - name: rook-ceph-operator
-      namespace: rook-ceph
+    - name: volsync
+      namespace: storage
   values:
     monitoring:
       enabled: true
