--- a/kubernetes/apps/base/storage/volsync/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/volsync/helmrelease.yaml
@@ -22,6 +22,8 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: snapshot-controller
   values:
     manageCRDs: true
     replicaCount: ${REPLICAS:=1}
