--- a/kubernetes/apps/base/storage/democratic-csi/helmrelease.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/helmrelease.yaml
@@ -23,6 +23,8 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
+  dependsOn:
+    - name: volsync
   values:
     controller:
       fullnameOverride: *name
