feat: update substitutions

--- a/kubernetes/infrastructure/components/clusters/test/cluster-secrets.sops.yaml
+++ b/kubernetes/infrastructure/components/clusters/test/cluster-secrets.sops.yaml
@@ -6,6 +6,7 @@ metadata:
 stringData:
     #ENC[AES256_GCM,data:dY6lA6GaJBlF0Wy8zg==,iv:beMAwQv+dWIEljb20Q/nKBye7wNYWTjWT0UadBODX2o=,tag:dQhd3h1EP9u1VR+LpcIPgA==,type:comment]
     SVC_KUBE_API: ENC[AES256_GCM,data:qlvu+dA71wo1WGA=,iv:29eVLQN+5QchTs7pNiiqtzl8B5sU4HeZjUjPgax5FTE=,tag:0wfeQydACb87z8M70UcHjw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:WR4Gzm2Q0ttLaIdM6IqW45hHAA==,iv:5El/US4ydcek4VvBb/UK0O58k0Ec7QlEHGu0glDX118=,tag:LmhE2C8y0QC/KkY1RZpA3Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             eG8vOG4zOXRQVW01K1hzNnNUdUxYNDQK2r6cmnIxsIDMUHfq8p0kOcr+E/KAea4z
             tdtvD/HkOfTil0Qwld0NWRyA4DKC7AjhC0P8QlhYrNlfr5lqBqIFmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-18T20:43:38Z"
-    mac: ENC[AES256_GCM,data:IO9X9uzpd6uHKn/hk22/DISZm7/zWxdFQLbPG4KvWpxzKoeD26xxWz7z80N1u2EMp2K/bES0shgqCIz74fVVEF1/CYjExASImy1Q/3+RTFw0MOUAru+/uYSb0JOTXCE86J3KzZhUIxcNo3ODcvVf+bQQ5cDA3U/RJpouA887hdM=,iv:qKD6FaniLVjs5qRduXUmSTbkPSf9X7lrhbMTIwF447E=,tag:yvuD5Pc9IQV52thz0ZdGkQ==,type:str]
+    lastmodified: "2025-02-27T22:36:47Z"
+    mac: ENC[AES256_GCM,data:UeogAVCDpD1c7WPf67McCVFmL2Nl1aEgChIjYPjXobagJfdavTdmT+mZ2Y+cJBJ66LJdq6bWcYH+x1ygNbYLljRNFKjnGnIPhFJ+axBijI/1JmSvUgGywDKPrNj//G62c+PI1nxtpqkZ3/jwZOcK3H5EunVGQfElu+SWSO6UB+w=,iv:98UgjRNlMdrm70P+19hdTYtlsEu+NIMq5rWi9m/w0zg=,tag:NyoAlgDyEyl1AmgEvzlqjw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
