fix: change domains

--- a/kubernetes/clusters/test/apps.yaml
+++ b/kubernetes/clusters/test/apps.yaml
@@ -44,7 +44,7 @@ spec:
   postBuild:
     substitute:
       CLUSTER: test
-      SECRET_DOMAIN: lildrunkensmurf.com
+      SECRET_DOMAIN: jory.dev
   prune: true
   sourceRef:
     kind: GitRepository
