--- a/kubernetes/infrastructure/components/clusters/test/cluster-secrets.sops.yaml
+++ b/kubernetes/infrastructure/components/clusters/test/cluster-secrets.sops.yaml
@@ -6,7 +6,7 @@ metadata:
 stringData:
     #ENC[AES256_GCM,data:dY6lA6GaJBlF0Wy8zg==,iv:beMAwQv+dWIEljb20Q/nKBye7wNYWTjWT0UadBODX2o=,tag:dQhd3h1EP9u1VR+LpcIPgA==,type:comment]
     SVC_KUBE_API: ENC[AES256_GCM,data:qlvu+dA71wo1WGA=,iv:29eVLQN+5QchTs7pNiiqtzl8B5sU4HeZjUjPgax5FTE=,tag:0wfeQydACb87z8M70UcHjw==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:WR4Gzm2Q0ttLaIdM6IqW45hHAA==,iv:5El/US4ydcek4VvBb/UK0O58k0Ec7QlEHGu0glDX118=,tag:LmhE2C8y0QC/KkY1RZpA3Q==,type:str]
+    #ENC[AES256_GCM,data:QnJd3cCWfaukyJH02KTvDUdK4OQf77bxzHNZBwYSNszKirQ=,iv:aKO6ksDqtdZem4LTQTLCQRockp8XMIc9alIzfVwN2xM=,tag:1mCgfgkPff5PlAdy7z7NGg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             eG8vOG4zOXRQVW01K1hzNnNUdUxYNDQK2r6cmnIxsIDMUHfq8p0kOcr+E/KAea4z
             tdtvD/HkOfTil0Qwld0NWRyA4DKC7AjhC0P8QlhYrNlfr5lqBqIFmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-27T22:36:47Z"
-    mac: ENC[AES256_GCM,data:UeogAVCDpD1c7WPf67McCVFmL2Nl1aEgChIjYPjXobagJfdavTdmT+mZ2Y+cJBJ66LJdq6bWcYH+x1ygNbYLljRNFKjnGnIPhFJ+axBijI/1JmSvUgGywDKPrNj//G62c+PI1nxtpqkZ3/jwZOcK3H5EunVGQfElu+SWSO6UB+w=,iv:98UgjRNlMdrm70P+19hdTYtlsEu+NIMq5rWi9m/w0zg=,tag:NyoAlgDyEyl1AmgEvzlqjw==,type:str]
+    lastmodified: "2025-02-27T22:49:23Z"
+    mac: ENC[AES256_GCM,data:5UuVqzHcTPiZBxBwVyCjb/prFgmbvrcYGUc42NgqXpn++y40J+Xm0+3yFpDkDKnPFXDLgHjMyk5oOHZOEt0XOfbFtWGZmjYwZGOXEujD5zDbvLLZgQkcEDn0WFW3fnOxTjlR8dDq/Vk2ZUlq2ovHAcuqVHu04fFKP6MoxCkLfsA=,iv:fFUTkZQBIat67VtSd2mMsRHcoutT3pdjClE1k5ukaHc=,tag:j95F+F6y+4seXg3loT8cOg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
