feat: swap to app for ARC

--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/externalsecret.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/externalsecret.yaml
@@ -12,8 +12,9 @@ spec:
     name: *name
     template:
       data:
-        ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN: |-
-          {{ .ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN }}
+        github_app_id: '{{ .github_app_id }}'
+        github_app_installation_id: '{{ .github_app_installation_id }}'
+        github_app_private_key: '{{ .github_app_private_key }}'
   dataFrom:
     - extract:
         key: actions-runner-controller
