feat: update secret

--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/runners/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
       namespace: actions-runner-system
   values:
     githubConfigUrl: https://github.com/joryirving/home-ops
-    githubConfigSecret: home-ops-runner
+    githubConfigSecret: home-ops-runner-secret
     minRunners: 1
     maxRunners: 12
     containerMode:
