feat: disable adb-s

--- a/kubernetes/apps/base/self-hosted/acars/externalsecret.yaml
+++ b/kubernetes/apps/base/self-hosted/acars/externalsecret.yaml
@@ -13,8 +13,8 @@ spec:
     template:
       data:
         DISCORD_WEBHOOK_URL: "{{ .DISCORD_WEBHOOK }}"
-        ADBSEXCHANGE_APIKEY: "{{ .ADBSEXCHANGE_APIKEY }}"
-        ADBSEXCHANGE_REFERENCE_GEOLOCATION: "{{ .LATITUDE }},{{ .LONGITUDE }}"
+        # ADBSEXCHANGE_APIKEY: "{{ .ADBSEXCHANGE_APIKEY }}"
+        # ADBSEXCHANGE_REFERENCE_GEOLOCATION: "{{ .LATITUDE }},{{ .LONGITUDE }}"
   dataFrom:
   - extract:
       key: acars
