feat: cleanup IDP because all my nodes are intel

--- a/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrelease.yaml
+++ b/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrelease.yaml
@@ -25,9 +25,7 @@ spec:
       retries: 3
   uninstall:
     keepHistory: false
-  dependsOn:
-    - name: node-feature-discovery
-      namespace: kube-tools
   values:
-    controllerExtraArgs: |
-      - --devices=gpu
+    manager:
+      devices:
+        gpu: true
