chore(renovate): use matchPackageNames

--- a/.github/renovate/packageRules.json5
+++ b/.github/renovate/packageRules.json5
@@ -5,13 +5,13 @@
       "description": ["Loose versioning for non-semver packages"],
       "matchDatasources": ["docker"],
       "versioning": "loose",
-      "matchPackagePatterns": ["plex"]
+      "matchPackageNames": ["/plex/"]
     },
     {
       "description": ["Custom versioning for mylar3"],
       "matchDatasources": ["docker"],
       "versioning": "regex:^version-v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)$",
-      "matchPackagePatterns": ["mylar3"]
+      "matchPackageNames": ["/mylar3/"]
     },
     {
       "description": ["Process terraform files"],
