--- a/.github/renovate/groups.json5
+++ b/.github/renovate/groups.json5
@@ -4,8 +4,8 @@
     {
       "description": ["1Password Connect Group"],
       "groupName": "1Password Connnect",
-      "matchPackagePatterns": ["1password/connect"],
       "matchDatasources": ["docker"],
+      "matchPackageNames": ["/1password/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -13,8 +13,8 @@
     {
       "description": ["Actions Runner Controller Group"],
       "groupName": "Actions Runner Controller",
-      "matchPackagePatterns": ["gha-runner-scale-set"],
       "matchDatasources": ["docker", "helm"],
+      "matchPackageNames": ["/gha-runner-scale-set/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -22,8 +22,8 @@
     {
       "description": ["Dragonfly Operator Group"],
       "groupName": "Dragonfly Operator",
-      "matchPackagePatterns": ["dragonfly(?:db)?.operator"],
       "matchDatasources": ["docker", "github-releases"],
+      "matchPackageNames": ["/dragonfly/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -31,8 +31,8 @@
     {
       "description": ["Flux Operator Group"],
       "groupName": "Flux Operator",
-      "matchPackagePatterns": ["flux-operator", "flux-instance"],
       "matchDatasources": ["docker"],
+      "matchPackageNames": ["/flux-operator/", "/flux-instance/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -40,8 +40,8 @@
     {
       "description": ["Intel Device Plugins Group"],
       "groupName": "Intel-Device-Plugins",
-      "matchPackagePatterns": ["intel-device-plugins"],
       "matchDatasources": ["helm"],
+      "matchPackageNames": ["/intel-device-plugins/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -49,8 +49,8 @@
     {
       "description": ["Kyoo Group"],
       "groupName": "Kyoo",
-      "matchPackagePatterns": ["kyoo"],
       "matchDatasources": ["docker", "github-releases"],
+      "matchPackageNames": ["/kyoo/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -58,8 +58,8 @@
     {
       "description": ["Rook-Ceph Group"],
       "groupName": "Rook-Ceph",
-      "matchPackagePatterns": ["rook.ceph"],
       "matchDatasources": ["helm"],
+      "matchPackageNames": ["/rook.ceph/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -67,8 +67,8 @@
     {
       "description": ["System Upgrade Controller Group"],
       "groupName": "System Upgrade Controller",
-      "matchPackagePatterns": ["system-upgrade-controller"],
       "matchDatasources": ["docker", "github-releases"],
+      "matchPackageNames": ["/system-upgrade-controller/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
@@ -76,8 +76,8 @@
     {
       "description": ["Talos Group"],
       "groupName": "Talos",
-      "matchPackagePatterns": ["siderolabs/talosctl", "siderolabs/installer"],
       "matchDatasources": ["docker"],
+      "matchPackageNames": ["/siderolabs/talosctl/", "/siderolabs/installer/"],
       "group": {
         "commitMessageTopic": "{{{groupName}}} group"
       }
