chore: update pre-pull images workflow for new flux-local version

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,14 +1,24 @@
 [env]
+_.python.venv = { path = "{{config_root}}/.venv", create = true }
 # File paths
-KUBECONFIG = '{{config_root}}/kubernetes/clusters/main/kubeconfig:{{config_root}}/kubernetes/clusters/test/kubeconfig:{{config_root}}/kubernetes/clusters/utility/kubeconfig'
-MINIJINJA_CONFIG_FILE = '{{config_root}}/.minijinja.toml'
-SOPS_AGE_KEY_FILE = '{{config_root}}/age.key'
-#TALOSCONFIG = '{{config_root}}/talos/main/clusterconfig/talosconfig:{{config_root}}/talos/utility/clusterconfig/talosconfig'
+KUBECONFIG = "{{config_root}}/kubernetes/clusters/main/kubeconfig:{{config_root}}/kubernetes/clusters/test/kubeconfig:{{config_root}}/kubernetes/clusters/utility/kubeconfig"
+MINIJINJA_CONFIG_FILE = "{{config_root}}/.minijinja.toml"
+SOPS_AGE_KEY_FILE = "{{config_root}}/age.key"
+#TALOSCONFIG = "{{config_root}}/talos/main/clusterconfig/talosconfig:{{config_root}}/talos/utility/clusterconfig/talosconfig"
 
 # File paths
-BOOTSTRAP_DIR = '{{config_root}}/bootstrap'
-SHARED_DIR = '{{config_root}}/infrastructure'
+BOOTSTRAP_DIR = "{{config_root}}/bootstrap"
+KUBERNETES_DIR = "{{config_root}}/kubernetes"
+ROOT_DIR = "{{config_root}}"
+SHARED_DIR = "{{config_root}}/infrastructure"
+SCRIPTS_DIR = "{{config_root}}/scripts"
+TALOS_DIR = "{{config_root}}/talos"
 
 _.file = [
-  '{{env.SHARED_DIR}}/components/system-upgrade/.env'
+  "{{config_root}}/kubernetes/apps/base/kube-tools/system-upgrade-controller/.env"
 ]
+
+[tools]
+"python" = "3.13"
+"uv" = "latest"
+"pipx:flux-local" = "latest"
