feat: move gitrepos

--- a/kubernetes/apps/base/actions-runner-system/actions-runner-controller/app/helmrepository.yaml
+++ b/kubernetes/apps/base/actions-runner-system/actions-runner-controller/app/helmrepository.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: ingress-nginx
-  namespace: flux-system
+  name: actions-runner-controller
 spec:
-  interval: 1h
-  url: https://kubernetes.github.io/ingress-nginx
+  type: oci
+  interval: 30m
+  url: oci://ghcr.io/actions/actions-runner-controller-charts
