--- a/kubernetes/apps/base/cert-manager/cert-manager/app/kustomization.yaml
+++ b/kubernetes/apps/base/cert-manager/cert-manager/app/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./clusterissuer.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
+  - ./helmrepository.yaml
   - ./prometheusrule.yaml
 configMapGenerator:
   - name: cert-manager-values
