--- a/kubernetes/apps/base/flux-system/headlamp/helmrepository.yaml
+++ b/kubernetes/apps/base/flux-system/headlamp/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: metrics-server
-  namespace: flux-system
+  name: headlamp
 spec:
   interval: 1h
-  url: https://kubernetes-sigs.github.io/metrics-server
+  url: https://headlamp-k8s.github.io/headlamp/
