--- a/kubernetes/apps/base/games/minecraft/mc-router/helmrepository.yaml
+++ b/kubernetes/apps/base/games/minecraft/mc-router/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: wiremind
-  namespace: flux-system
+  name: itzg-charts
 spec:
-  interval: 1h
-  url: https://wiremind.github.io/wiremind-helm-charts/
+  interval: 2h
+  url: https://itzg.github.io/minecraft-server-charts/
