--- a/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrepository.yaml
+++ b/kubernetes/apps/base/kube-tools/intel-device-plugins/operator/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: headlamp
-  namespace: flux-system
+  name: intel
 spec:
   interval: 1h
-  url: https://headlamp-k8s.github.io/headlamp/
+  url: https://intel.github.io/helm-charts
