--- a/kubernetes/apps/base/kube-tools/node-feature-discovery/helmrepository.yaml
+++ b/kubernetes/apps/base/kube-tools/node-feature-discovery/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: piraeus
-  namespace: flux-system
+  name: node-feature-discovery
 spec:
   interval: 1h
-  url: https://piraeus.io/helm-charts/
+  url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
