--- a/kubernetes/apps/base/observability/silence-operator/app/helmrepository.yaml
+++ b/kubernetes/apps/base/observability/silence-operator/app/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: backube
-  namespace: flux-system
+  name: wiremind
 spec:
   interval: 1h
-  url: https://backube.github.io/helm-charts/
+  url: https://wiremind.github.io/wiremind-helm-charts/
