--- a/kubernetes/apps/base/rook-ceph/rook-ceph/app/helmrepository.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/app/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: node-feature-discovery
-  namespace: flux-system
+  name: rook-ceph
 spec:
-  interval: 1h
-  url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
+  interval: 2h
+  url: https://charts.rook.io/release
