--- a/kubernetes/apps/base/security/authentik/helmrepository.yaml
+++ b/kubernetes/apps/base/security/authentik/helmrepository.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: democratic-csi
-  namespace: flux-system
+  name: authentik-charts
 spec:
-  interval: 1h
-  url: https://democratic-csi.github.io/charts/
+  interval: 30m
+  url: https://charts.goauthentik.io
+  timeout: 3m
