--- a/kubernetes/apps/base/storage/csi-driver-nfs/helmrepository.yaml
+++ b/kubernetes/apps/base/storage/csi-driver-nfs/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: openebs
-  namespace: flux-system
+  name: csi-driver-nfs
 spec:
-  interval: 1h
-  url: https://openebs.github.io/openebs
+  interval: 2h
+  url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
