--- a/kubernetes/apps/base/storage/openebs/helmrepository.yaml
+++ b/kubernetes/apps/base/storage/openebs/helmrepository.yaml
@@ -3,9 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: actions-runner-controller
-  namespace: flux-system
+  name: openebs
 spec:
-  type: oci
-  interval: 30m
-  url: oci://ghcr.io/actions/actions-runner-controller-charts
+  interval: 1h
+  url: https://openebs.github.io/openebs
