--- a/kubernetes/apps/base/storage/snapshot-controller/helmrepository.yaml
+++ b/kubernetes/apps/base/storage/snapshot-controller/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: intel
-  namespace: flux-system
+  name: piraeus
 spec:
   interval: 1h
-  url: https://intel.github.io/helm-charts
+  url: https://piraeus.io/helm-charts/
