--- a/kubernetes/apps/base/storage/volsync/helmrepository.yaml
+++ b/kubernetes/apps/base/storage/volsync/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: rook-ceph
-  namespace: flux-system
+  name: backube
 spec:
-  interval: 2h
-  url: https://charts.rook.io/release
+  interval: 1h
+  url: https://backube.github.io/helm-charts/
