--- a/kubernetes/infrastructure/repositories/helm/kustomization.yaml
+++ b/kubernetes/infrastructure/repositories/helm/kustomization.yaml
@@ -2,24 +2,4 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ./actions-runner-controller.yaml
-  - ./authentik-charts.yaml
-  - ./backube.yaml
-  - ./cilium.yaml
-  - ./csi-driver-nfs.yaml
-  - ./democratic-csi.yaml
-  - ./descheduler.yaml
-  - ./external-dns.yaml
-  - ./headlamp.yaml
-  - ./ingress-nginx.yaml
-  - ./intel.yaml
-  - ./itzg.yaml
-  - ./jetstack.yaml
-  - ./kubernetes-sigs-nfd.yaml
-  - ./metrics-server.yaml
-  - ./openebs.yaml
-  - ./piraeus.yaml
-  - ./rook-ceph.yaml
-  - ./userinit-controller.yaml
-  - ./wiremind.yaml
+resources: []
