--- a/kubernetes/apps/base/cert-manager/cert-manager/app/helmrepository.yaml
+++ b/kubernetes/apps/base/cert-manager/cert-manager/app/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: itzg-charts
-  namespace: flux-system
+  name: jetstack
 spec:
-  interval: 2h
-  url: https://itzg.github.io/minecraft-server-charts/
+  interval: 1h
+  url: https://charts.jetstack.io/
