--- a/kubernetes/apps/base/database/crunchy-postgres/userinit-controller/helmrepository.yaml
+++ b/kubernetes/apps/base/database/crunchy-postgres/userinit-controller/helmrepository.yaml
@@ -3,8 +3,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: descheduler
-  namespace: flux-system
+  name: crunchy-userinit
 spec:
-  interval: 1h
-  url: https://kubernetes-sigs.github.io/descheduler
+  interval: 30m
+  url: https://ramblurr.github.io/crunchy-userinit-controller
+  timeout: 3m
