--- a/kubernetes/apps/base/kube-system/cilium/helmrepository.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: csi-driver-nfs
-  namespace: flux-system
+  name: cilium
 spec:
-  interval: 2h
-  url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
+  interval: 1h
+  url: https://helm.cilium.io
