--- a/kubernetes/apps/base/kube-system/metrics-server/helmrepository.yaml
+++ b/kubernetes/apps/base/kube-system/metrics-server/helmrepository.yaml
@@ -3,9 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: crunchy-userinit
-  namespace: flux-system
+  name: metrics-server
 spec:
-  interval: 30m
-  url: https://ramblurr.github.io/crunchy-userinit-controller
-  timeout: 3m
+  interval: 1h
+  url: https://kubernetes-sigs.github.io/metrics-server
