--- a/kubernetes/apps/base/kube-tools/descheduler/helmrepository.yaml
+++ b/kubernetes/apps/base/kube-tools/descheduler/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: jetstack
-  namespace: flux-system
+  name: descheduler
 spec:
   interval: 1h
-  url: https://charts.jetstack.io/
+  url: https://kubernetes-sigs.github.io/descheduler
