--- a/kubernetes/apps/base/network/internal/ingress-nginx/helmrepository.yaml
+++ b/kubernetes/apps/base/network/internal/ingress-nginx/helmrepository.yaml
@@ -3,8 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cilium
-  namespace: flux-system
+  name: ingress-nginx
 spec:
   interval: 1h
-  url: https://helm.cilium.io
+  url: https://kubernetes.github.io/ingress-nginx
