--- a/kubernetes/apps/base/storage/democratic-csi/helmrepository.yaml
+++ b/kubernetes/apps/base/storage/democratic-csi/helmrepository.yaml
@@ -3,9 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: authentik-charts
-  namespace: flux-system
+  name: democratic-csi
 spec:
-  interval: 30m
-  url: https://charts.goauthentik.io
-  timeout: 3m
+  interval: 1h
+  url: https://democratic-csi.github.io/charts/
