chore: kubelet concurrent pulls, helmfile updates and more

--- a/kubernetes/apps/main/kube-system/coredns/ks.yaml
+++ b/kubernetes/apps/main/kube-system/coredns/ks.yaml
@@ -13,7 +13,7 @@ spec:
   postBuild:
     substitute:
       REPLICAS: "3" #Match control plane count
-  prune: false # never should be deleted
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
