--- a/kubernetes/apps/main/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/main/rook-ceph/rook-ceph/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/rook-ceph/rook-ceph/app
-  prune: false # never should be deleted
+  prune: false # let's not make happy accidents
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -50,7 +50,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: rook
-  prune: false # never should be deleted
+  prune: false # let's not make happy accidents
   sourceRef:
     kind: GitRepository
     name: flux-system
