--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -2,13 +2,26 @@
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
 helmDefaults:
+  cleanupOnFail: true
   wait: true
   waitForJobs: true
   # waitRetries: 3 # Not supported by Helm yet
 
 repositories:
+  - name: controlplaneio
+    url: ghcr.io/controlplaneio-fluxcd/charts
+    oci: true
+
+  - name: coredns
+    url: ghcr.io/coredns/charts
+    oci: true
+
   - name: cilium
     url: https://helm.cilium.io
+
+  - name: external-secrets
+    url: ghcr.io/external-secrets/charts
+    oci: true
 
   - name: jetstack
     url: https://charts.jetstack.io
@@ -16,6 +29,7 @@ repositories:
 releases:
   - name: cilium
     namespace: kube-system
+    atomic: true
     chart: cilium/cilium
     version: 1.17.1
     values: ['{{ requiredEnv "SHARED_APPS" }}/kube-system/cilium/helm/values.yaml']
@@ -26,13 +40,15 @@ releases:
 
   - name: coredns
     namespace: kube-system
-    chart: oci://ghcr.io/coredns/charts/coredns
+    atomic: true
+    chart: coredns/coredns
     version: 1.39.1
     values: ['{{ requiredEnv "SHARED_APPS" }}/kube-system/coredns/helm/values.yaml']
     needs: ['kube-system/cilium']
 
   - name: cert-manager
     namespace: cert-manager
+    atomic: true
     chart: jetstack/cert-manager
     version: v1.17.1
     values: ['{{ requiredEnv "SHARED_APPS" }}/cert-manager/cert-manager/app/helm/values.yaml']
@@ -40,21 +56,24 @@ releases:
 
   - name: external-secrets
     namespace: external-secrets
-    chart: oci://ghcr.io/external-secrets/charts/external-secrets
+    atomic: true
+    chart: external-secrets/external-secrets
     version: 0.14.3
     values: ['{{ requiredEnv "SHARED_APPS" }}/external-secrets/external-secrets/helm/values.yaml']
     needs: ['cert-manager/cert-manager']
 
   - name: flux-operator
     namespace: flux-system
-    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+    atomic: true
+    chart: controlplaneio/flux-operator
     version: 0.17.0
     values: ['{{ requiredEnv "SHARED_APPS" }}/flux-system/flux-operator/helm/values.yaml']
     needs: ['external-secrets/external-secrets']
 
   - name: flux-instance
     namespace: flux-system
-    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+    atomic: true
+    chart: controlplaneio/flux-instance
     version: 0.17.0
     values: ['{{ requiredEnv "CLUSTER_DIR" }}/flux-instance/helm/values.yaml']
     needs: ['flux-system/flux-operator']
