--- a/kubernetes/apps/main/observability/silence-operator/ks.yaml
+++ b/kubernetes/apps/main/observability/silence-operator/ks.yaml
@@ -31,7 +31,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/observability/silence-operator/crds
-  prune: false # never should be deleted
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
