--- a/kubernetes/apps/test/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/test/flux-system/flux-operator/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/flux-system/flux-operator
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
