--- a/kubernetes/apps/test/kube-system/cilium/ks.yaml
+++ b/kubernetes/apps/test/kube-system/cilium/ks.yaml
@@ -10,7 +10,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 1h
   path: ./kubernetes/apps/base/kube-system/cilium
-  prune: false # never should be deleted
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -45,7 +45,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 15m
   path: ./kubernetes/apps/test/kube-system/cilium/config
-  prune: false # never should be deleted
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
