--- a/kubernetes/clusters/utility/flux-repositories.yaml
+++ b/kubernetes/clusters/utility/flux-repositories.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   interval: 30m
   path: ./kubernetes/infrastructure/repositories/
-  prune: false # never should be deleted
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
