chore(ingress-nginx): ai bots and quoting things

--- a/kubernetes/apps/base/network/internal/ingress-nginx/helmrelease.yaml
+++ b/kubernetes/apps/base/network/internal/ingress-nginx/helmrelease.yaml
@@ -43,7 +43,8 @@ spec:
       config:
         allow-snippet-annotations: true
         annotations-risk-level: Critical
-        block-user-agents: "AdsBot-Google,Amazonbot,anthropic-ai,Applebot-Extended,Bytespider,CCBot,ChatGPT-User,ClaudeBot,Claude-Web,cohere-ai,Diffbot,FacebookBot,FriendlyCrawler,Google-Extended,GoogleOther,GPTBot,img2dataset,omgili,omgilibot,peer39_crawler,peer39_crawler/1.0,PerplexityBot,YouBot," # taken from https://github.com/ai-robots-txt/ai.robots.txt
+        # Ref: https://github.com/ai-robots-txt/ai.robots.txt
+        block-user-agents: AI2Bot,Ai2Bot-Dolma,Amazonbot,anthropic-ai,Applebot,Applebot-Extended,Brightbot 1.0,Bytespider,CCBot,ChatGPT-User,Claude-Web,ClaudeBot,cohere-ai,cohere-training-data-crawler,Crawlspace,Diffbot,DuckAssistBot,FacebookBot,FriendlyCrawler,Google-Extended,GoogleOther,GoogleOther-Image,GoogleOther-Video,GPTBot,iaskspider/2.0,ICC-Crawler,ImagesiftBot,img2dataset,ISSCyberRiskCrawler,Kangaroo Bot,Meta-ExternalAgent,Meta-ExternalFetcher,OAI-SearchBot,omgili,omgilibot,PanguBot,PerplexityBot,PetalBot,Scrapy,SemrushBot-OCOB,SemrushBot-SWA,Sidetrade indexer bot,Timpibot,VelenPublicWebCrawler,Webzio-Extended,YouBot
         client-body-buffer-size: 100M
         client-body-timeout: 120
         client-header-timeout: 120
@@ -52,7 +53,7 @@ spec:
         enable-real-ip: "true"
         force-ssl-redirect: "true"
         hide-headers: Server,X-Powered-By
-        hsts-max-age: 31449600
+        hsts-max-age: "31449600"
         keep-alive-requests: 10000
         keep-alive: 120
         log-format-escape-json: "true"
