chore: update mise config

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,4 @@
 [env]
-_.python.venv = { path = "{{config_root}}/.venv", create = true }
 # File paths
 KUBECONFIG = "{{config_root}}/kubernetes/clusters/main/kubeconfig:{{config_root}}/kubernetes/clusters/test/kubeconfig:{{config_root}}/kubernetes/clusters/utility/kubeconfig"
 MINIJINJA_CONFIG_FILE = "{{config_root}}/.minijinja.toml"
@@ -17,8 +16,9 @@ TALOS_DIR = "{{config_root}}/talos"
 _.file = [
   "{{config_root}}/kubernetes/apps/base/kube-tools/system-upgrade-controller/.env"
 ]
+#_.python.venv = { path = "{{config_root}}/.venv", create = true }
 
-[tools]
-"python" = "3.13"
-"uv" = "latest"
-"pipx:flux-local" = "latest"
+#[tools]
+#"python" = "3.13"
+#"uv" = "latest"
+#"pipx:flux-local" = "latest"
