feat: scale down wyze

--- a/kubernetes/apps/main/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/main/self-hosted/kustomization.yaml
@@ -14,4 +14,4 @@ resources:
   - ./lubelog/ks.yaml
   - ./paperless/ks.yaml
   - ./redlib/ks.yaml
-  - ./wyze-bridge/ks.yaml
+  # - ./wyze-bridge/ks.yaml
