--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -1,6 +1,6 @@
 ---
   # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-  name: "Deployment Restart"
+  name: NFS Deployment Restart
 
   on:
     workflow_dispatch:
@@ -8,8 +8,8 @@
       types: [nas-restart]
 
   jobs:
-    sync:
-      name: Deployment Restart
+    main:
+      name: NFS Deployment Restart - Deployment Restart
       runs-on: [home-ops-runner]
       strategy:
         matrix:
