--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,14 +1,14 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: "Tag"
+name: Tag
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 1 * *" # 1st day of every month at Midnight
+    - cron: "0 0 1 * *"
 
 jobs:
-  tag:
+  main:
     name: Tag
     runs-on: ubuntu-latest
     steps:
